added some picks

--- a/WebSite 1/index.html
+++ b/WebSite 1/index.html
@@ -120,7 +120,8 @@
     <div class="flip-box">
       <div class="flip-box-inner">
         <div class="flip-box-front">
-          <h2>Front Side</h2>
+          <!-- <h2>Front Side</h2> -->
+          <img src="c4.jpg" alt="">
         </div>
         <div class="flip-box-back">
           <h2>Back Side</h2>
@@ -130,7 +131,8 @@
     <div class="flip-box">
       <div class="flip-box-inner">
         <div class="flip-box-front">
-          <h2>Front Side</h2>
+          <!-- <h2>Front Side</h2> -->
+          <img src="c1.jpg" alt="">
         </div>
         <div class="flip-box-back">
           <h2>Back Side</h2>
@@ -140,13 +142,13 @@
   </div>
     
     <div class="box">
-    <div class="zoom"></div>
+    <div class="zoom"><h1>Apply Coupon Code Here!!</h1></div>
   </div>
     <div class="box">
     <div class="flip-box">
     <div class="flip-box-inner">
     <div class="flip-box-front">
-      <h2>Front Side</h2>
+      <img src="c3.jpg" alt="">
     </div>
     <div class="flip-box-back">
       <h2>Back Side</h2>
@@ -156,7 +158,8 @@
     <div class="flip-box">
     <div class="flip-box-inner">
     <div class="flip-box-front">
-      <h2>Front Side</h2>
+      <!-- <h2>Front Side</h2> -->
+      <img src="c2.jpg" alt="">
     </div>
     <div class="flip-box-back">
       <h2>Back Side</h2>
