--- a/WebSite 1/index.html
+++ b/WebSite 1/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" media="screen and (max-width:1200px)" href="phone.css">
 
   <title>Royal Cart- Perfect online Shopping website for general category</title>
 </head>
@@ -128,17 +129,7 @@
         </div>
       </div>
     </div>
-    <div class="flip-box">
-      <div class="flip-box-inner">
-        <div class="flip-box-front">
-          <!-- <h2>Front Side</h2> -->
-          <img src="c1.jpg" alt="">
-        </div>
-        <div class="flip-box-back">
-          <h2>Back Side</h2>
-        </div>
-      </div>
-    </div>
+    
   </div>
     
     <div class="box">
@@ -155,24 +146,12 @@
     </div>
     </div>
     </div>
-    <div class="flip-box">
-    <div class="flip-box-inner">
-    <div class="flip-box-front">
-      <!-- <h2>Front Side</h2> -->
-      <img src="c2.jpg" alt="">
-    </div>
-    <div class="flip-box-back">
-      <h2>Back Side</h2>
-    </div>
-    </div>
-    </div>
+   
   </div>
   </div>  
 </section>  
-
-  
-
-
+<br>
+ 
 
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
@@ -198,7 +177,7 @@
     </div>
   <div class="columns">
       <ul class="price">
-        <li class="header">Standard</li>
+       <li class="header">Standard</li>
         <li class="grey">$ 5 / month</li>
         <li>Cash on Delivery</li>
         <li>Discounts</li>
